[package]
name = "stig-view"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["svg", "image", "tokio"] }
image = "0.25.9"
regex = "1.12.2"
rfd = "0.17.2"
tokio = { version = "1.49.0", features = ["sync", "rt"]}
uuid = { version = "1.20.0", features = ["v4"] }
