[package]
name = "stig-view-core"
version = "0.1.1"
edition = "2024"

[lib]
name = "stig_view_core"
path = "src/lib.rs"

[dependencies]
quick-xml = "0.39.2"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }
regex = "1.12.2"
rmp-serde = "1.3.1"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["sync", "rt"]}
zstd = "0.13.3"
