[package]
name = "stig-view-desktop"
version = "0.5.1"
edition = "2024"

[[bin]]
name = "stig-view"
path = "src/main.rs"

[dependencies]
stig-view-core = { path = "../core" }
iced = { version = "0.14.0", features = ["svg", "image", "tokio", "lazy", "advanced"] }
iced_graphics = { version = "0.14.0" }
cosmic-text = { version = "0.15" }
unicode-segmentation = "1"
image = "0.25.9"
regex = "1.12.2"
rfd = "0.17.2"
dirs = "6"
tokio = { version = "1.49.0", features = ["sync", "fs"]}
serde = "1.0.228"
toml = "1.0.6"

[build-dependencies]
winresource = "0.1"
