[package]
name = "stig-view-iced"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "stig_view_iced"
path = "src/main.rs"

[dependencies]
stig-view-core = { path = "../core" }
iced = { version = "0.14.0", features = ["svg", "image", "tokio"] }
image = "0.25.9"
regex = "1.12.2"
rfd = "0.17.2"
dirs = "6"
tokio = { version = "1.49.0", features = ["sync", "rt"]}
